// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.time.v0;

import "com/digitalasset/canton/protocol/v0/sequencing.proto";

// Messages for sequencing
message TimeProof {
  com.digitalasset.canton.protocol.v0.PossiblyIgnoredSequencedEvent event = 1; // must be an ordinary event
}
